--- a/app/_var.scss
+++ b/app/_var.scss
@@ -1,37 +1,6 @@
-$modal-color:#535353;
-$modal-bg-bt:#777777;
-
-
-$header-bg: #dcdcdc;
-$header-color:#767676;
-
-
-$nav-bg: #777777;
-$nav-color: #ffffff;
-
-$breadcrumbs:#767676;
-
-
-$catalog-color:#767676;
-$catalog-active-color:#010101;
-$catalog-page-color:#767676;
-$catalog-page-active-color:#444444;
-$catalog-hr-color:#777777;
-
-$excel-color: #000000;
-
-$product-bg:#dcdcdc;
-$product-price-color:#444444;
-$product-dec-color:#767676;
-
-$about-color: #767676;
-
-$news-bg: #767676;
-$news-color: #ffffff;
-
-
-$cv-color: #767676;
-
-
-$footer-bg:#767676;
-$footer-color:#ffffff;
+$white:#ffffff;
+$gray:#535353;
+$dark-gray:#444444;
+$light-gray:#777777;
+$mare-light-gray:#767676;
+$black:#010101;
