--- a/app/style.scss
+++ b/app/style.scss
@@ -1,38 +1,48 @@
 @import "var";
 @import "media-slider";
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
 @font-face {
   font-family: "Open Sans Condensed";
   src: url("/fonts/OpenSansCondensed-Light.ttf");
 }
-*{
+
+* {
   box-sizing: border-box;
   font-family: 'PT Sans';
   margin: 0;
   padding: 0;
 }
-  body{
-    position: relative;
-    min-height: 100vh;
-    padding-bottom: 400px;
-    }
 
-div.container{
+body {
+  position: relative;
+  min-height: 100vh;
+  padding-bottom: 400px;
+}
+
+div.container {
   margin: auto;
   line-height: 22px;
   font-size: 14px;
   width: 1000px;
- padding: 0 10px 0;
+  padding: 0 10px 0;
 
 }
-section.modal{
+
+section.modal {
   display: none;
 }
+
 @keyframes pop-up {
-  from {opacity: 0;}
-   to   {opacity: 1;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-section.modal.active{
+
+section.modal.active {
   animation: pop-up 0.5s;
   z-index: 1000;
   width: 100vw;
@@ -42,148 +52,170 @@ section.modal.active{
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, 0.3);
-  div.exit{
+
+  div.exit {
     position: relative;
-    div.x{
+
+    div.x {
       position: absolute;
       right: -28px;
       top: -27px;
       width: 27px;
       height: 27px;
       text-align: center;
-      &:hover{
+
+      &:hover {
         cursor: pointer;
       }
     }
   }
-  div.feedback{
-  font-size: 15px;
-  font-weight: bold;
+
+  div.feedback {
+    font-size: 15px;
+    font-weight: bold;
 
     form.mail {
-      color:$gray;
+      color: $gray;
       display: flex;
       flex-direction: column;
       align-items: center;
       width: 466px;
       height: 578px;
       background-color: $white;
-      div.items{
-      p{
-        margin: 10px;
-      }
+
+      div.items {
+        p {
+          margin: 10px;
+        }
 
         text-align: center;
       }
-      p.title{
+
+      p.title {
         margin: 22px;
-        color: $gray ;
+        color: $gray;
         font-size: 24px;
         font-weight: bold;
         text-transform: uppercase;
       }
 
-      div.input{
+      div.input {
         text-align: center;
         display: flex;
         flex-direction: column;
-        p{
+
+        p {
           margin: 10px;
         }
-        div.item{
 
-          input{
+        div.item {
+
+          input {
             width: 339px;
             height: 40px;
             border: 1px solid #c3c3c3;
             background-color: $white;
             padding: 15px;
           }
-          .error{
-           border: 1px solid  #fbadad;
-           &::placeholder {
-             color:#fbadad;
-             font-style: italic;
-           }
-           box-shadow: inset 0 0 10px 3px rgba(251, 173, 173, 0.97);
+
+          .error {
+            border: 1px solid #fbadad;
+
+            &::placeholder {
+              color: #fbadad;
+              font-style: italic;
+            }
+
+            box-shadow: inset 0 0 10px 3px rgba(251, 173, 173, 0.97);
           }
-          .not_error{
-            border: 1px solid #c3c3c3!important;
-            background-color: $white!important;
+
+          .not_error {
+            border: 1px solid #c3c3c3 !important;
+            background-color: $white !important;
             box-shadow: none;
           }
+        }
+
       }
 
-    }
-    textarea{
-      width: 339px;
-      height: 140px;
-      border: 1px solid #c3c3c3;
-      background-color: $white;
-      resize: none;
-      padding: 15px;
-      &.message.error{
-        &::placeholder {
-          color:#fbadad;
-          font-style: italic;
+      textarea {
+        width: 339px;
+        height: 140px;
+        border: 1px solid #c3c3c3;
+        background-color: $white;
+        resize: none;
+        padding: 15px;
+
+        &.message.error {
+          &::placeholder {
+            color: #fbadad;
+            font-style: italic;
+          }
+
+          border: 1px solid #fbadad;
+          box-shadow: inset 0 0 10px 3px rgba(251, 173, 173, 0.97);
         }
-        border: 1px solid  #fbadad;
-        box-shadow: inset 0 0 10px 3px rgba(251, 173, 173, 0.97);
+
+        &.message.error.not_error {
+          border: 1px solid #c3c3c3 !important;
+          background-color: $white !important;
+          box-shadow: none;
+        }
       }
-      &.message.error.not_error{
-        border: 1px solid #c3c3c3!important;
-        background-color: $white!important;
-        box-shadow: none;
-      }
-    }
-    div.button{
-      button{
-        width: 128px;
-        height: 42px;
-        margin: 22px;
-        background: $light-gray;
-        color: $white;
-        font-size: 20px;
-        font-weight: 700;
-        text-transform: uppercase;
-        border: 0px;
+
+      div.button {
+        button {
+          width: 128px;
+          height: 42px;
+          margin: 22px;
+          background: $light-gray;
+          color: $white;
+          font-size: 20px;
+          font-weight: 700;
+          text-transform: uppercase;
+          border: 0px;
+        }
       }
     }
   }
-}
 
 }
 
-header{
+header {
   min-width: 1000px;
   background: $white;
   height: 230px;
-  div.container{
+
+  div.container {
     position: relative;
-    padding:  65px  0;
+    padding: 65px 0;
   }
-  div.logo{
+
+  div.logo {
     position: absolute;
     left: 0;
-    img{
+
+    img {
       width: 273px;
       height: 100px;
     }
   }
-  div.tell{
+
+  div.tell {
     position: absolute;
     right: 0;
 
-    p{
+    p {
       line-height: 46px;
       letter-spacing: 1px;
       font-size: 40px;
       font-family: 'Open Sans Condensed', sans-serif;
       color: $mare-light-gray;
     }
-    span.feedback-link{
+
+    span.feedback-link {
       position: absolute;
-      right:0;
+      right: 0;
       font-size: 24px;
       letter-spacing: 0.6px;
       font-weight: bold;
@@ -191,45 +223,51 @@ header{
       color: $mare-light-gray;
       text-decoration: none;
       border-bottom: 1px dashed $mare-light-gray;
-      &:hover{
+
+      &:hover {
         cursor: pointer;
       }
     }
   }
 }
 
-nav{
+nav {
   min-width: 1000px;
   background: $light-gray;
   min-height: 80px;
-  div.container{
-    div.list{
-      ul.nav{
+
+  div.container {
+    div.list {
+      ul.nav {
         padding: 26px 0;
         display: flex;
         justify-content: space-around;
         flex-wrap: wrap;
         font-size: 30px;
 
-        li{
+        li {
 
           list-style: none;
           margin: 10px 0;
-          &:after{
+
+          &:after {
             content: '|';
             font-size: 35px;
             padding: 0 0 0 20px;
             color: $white;
           }
-          &:last-child:after{
+
+          &:last-child:after {
             display: none;
           }
-          a{
+
+          a {
 
             text-decoration: none;
             color: $white;
             line-height: 22px;
-            &:hover{
+
+            &:hover {
 
               border-bottom: 2px solid $white;
             }
@@ -243,44 +281,51 @@ nav{
   }
 }
 
-section.slider{
+section.slider {
 
-    div.img{
-      display: flex;
-      justify-content: center;
-      img{
-        width: 1248px;
-        height: 462px;
-      }
-    }
-    div.slider-nav{
-      position: relative;
-      top: -240px;
-      img.prev{
-        position: absolute;
-        left: 450px;
-      }
-      img.next{
-        position: absolute;
-        right: 450px;
-      }
+  div.img {
+    display: flex;
+    justify-content: center;
+
+    img {
+      width: 1248px;
+      height: 462px;
     }
   }
 
-section.breadcrumbs{
-  div.breadcrumbs{
+  div.slider-nav {
+    position: relative;
+    top: -240px;
 
-    ul{
+    img.prev {
+      position: absolute;
+      left: 450px;
+    }
+
+    img.next {
+      position: absolute;
+      right: 450px;
+    }
+  }
+}
+
+section.breadcrumbs {
+  div.breadcrumbs {
+
+    ul {
       display: flex;
-      li{
+
+      li {
         margin: 0 5px 0 0;
         list-style: none;
-        &:after{
+
+        &:after {
           margin-left: 5px;
           content: '/';
           color: $mare-light-gray;
         }
-        a{
+
+        a {
           color: $mare-light-gray;
         }
       }
@@ -288,178 +333,203 @@ section.breadcrumbs{
   }
 }
 
-section.catalog{
+section.catalog {
   margin: 26px 0 0 0;
-  div.container{
+
+  div.container {
     min-height: 894px;
     position: relative;
-      div.catalog-list{
-        position: absolute;
-        left: 10px;
-        margin: 10px 0;
-        max-width: 178px;
-        min-height: 508px;
+
+    div.catalog-list {
+      position: absolute;
+      left: 10px;
+      margin: 10px 0;
+      max-width: 178px;
+      min-height: 508px;
+      color: $mare-light-gray;
+
+      a {
+        letter-spacing: 0.45px;
+        text-decoration: none;
         color: $mare-light-gray;
 
-        a{
-          letter-spacing: 0.45px;
-          text-decoration: none;
-          color: $mare-light-gray;
-          &:hover{
-            color: $black;
-            text-decoration: underline;
-          }
+        &:hover {
+          color: $black;
+          text-decoration: underline;
         }
-        div.item {
-          p{
-            a{
-              font-size: 18px;
-              color: $mare-light-gray;
-            }
-          }
-          ul{
-            display: none;
-          }
-          &:hover{
-            ul{
-              margin-left: 30px;
-              display: block;
-              transition-duration: 1s;
-              padding: 0 0 15px 0;
+      }
 
-            }
-          }
-        }
-        div.excel{
-          position: absolute;
-          bottom: 0;
-          div.item-ex{
-            display: flex;
-            flex-direction: column;
-            img{
-              width: 97px;
-              height: 111px;
-              margin: 0 33px;
-            }
-            a{
-              color:$black;
-              text-decoration: none;
-              font-size: 30px;
-              font-weight: bold;
-              line-height: 25px;
-              box-sizing: content-box;
-              margin: 0;
-              width: 162px;
-            }
-          }
-        }
-      }
-      div.product-list{
-        position: absolute;
-        right: 10px;
-        display: flex;
-        flex-wrap: wrap;
-        width: 780px;
-        height: 780px;
-        div.product-item{
-          margin: 0 15px 20px 0;
-          background: #dcdcdc;
-          width: 250px;
-          height: 380px;
-          &:nth-child(3){
-            margin: 0 0 20px;
-          }
-          img.product{
-            margin: 20px 20px 20px
-          }
-          p.description{
-            margin: 0 42px 15px 20px;
-            color:$mare-light-gray;
+      div.item {
+        p {
+          a {
             font-size: 18px;
+            color: $mare-light-gray;
           }
-          div.do{
-            margin-top: 40px;
-            display: flex;
-            justify-content: space-between;
-            p{
-              margin: 0 0 14px 18px;
-              font-size: 28px;
-              font-weight: 700;
-              color:$dark-gray;
-            }
-            img.add{
-              width: 28px;
-              height: 21px;
-              margin-right: 36px;
-            }
+        }
+
+        ul {
+          display: none;
+        }
+
+        &:hover {
+          ul {
+            margin-left: 30px;
+            display: block;
+            transition-duration: 1s;
+            padding: 0 0 15px 0;
+
           }
         }
       }
-      div.page{
+
+      div.excel {
+        position: absolute;
+        bottom: 0;
+
+        div.item-ex {
+          display: flex;
+          flex-direction: column;
+
+          img {
+            width: 97px;
+            height: 111px;
+            margin: 0 33px;
+          }
+
+          a {
+            color: $black;
+            text-decoration: none;
+            font-size: 30px;
+            font-weight: bold;
+            line-height: 25px;
+            box-sizing: content-box;
+            margin: 0;
+            width: 162px;
+          }
+        }
+      }
+    }
+
+    div.product-list {
+      position: absolute;
+      right: 10px;
+      display: flex;
+      flex-wrap: wrap;
+      width: 780px;
+      height: 780px;
+
+      div.product-item {
+        margin: 0 15px 20px 0;
+        background: #dcdcdc;
+        width: 250px;
+        height: 380px;
+
+        &:nth-child(3) {
+          margin: 0 0 20px;
+        }
+
+        img.product {
+          margin: 20px 20px 20px
+        }
+
+        p.description {
+          margin: 0 42px 15px 20px;
+          color: $mare-light-gray;
+          font-size: 18px;
+        }
+
+        div.do {
+          margin-top: 40px;
+          display: flex;
+          justify-content: space-between;
+
+          p {
+            margin: 0 0 14px 18px;
+            font-size: 28px;
+            font-weight: 700;
+            color: $dark-gray;
+          }
+
+          img.add {
+            width: 28px;
+            height: 21px;
+            margin-right: 36px;
+          }
+        }
+      }
+    }
+
+    div.page {
       position: absolute;
       bottom: -55px;
       left: 50%;
       right: 50%;
-      ul.page-list{
+
+      ul.page-list {
 
         display: flex;
         justify-content: center;
-        li.active{
-          a{
+
+        li.active {
+          a {
             font-size: 20px;
             font-weight: bold;
             color: $dark-gray;
           }
         }
-        li{
+
+        li {
           list-style: none;
           padding: 0 5px;
 
-          a{
+          a {
             text-decoration: none;
             color: $mare-light-gray;
             font-size: 14px;
             margin: 7px;
-            &:hover{
+
+            &:hover {
               color: $dark-gray;
             }
           }
         }
       }
     }
-      hr{
-        box-sizing: border-box;
 
-        position: absolute;
-        width: 780px;
-        bottom: 0;
-        right: 10px;
-        background: $light-gray;
-        margin: 2px 0 28px;
+    hr {
+      box-sizing: border-box;
 
-      }
+      position: absolute;
+      width: 780px;
+      bottom: 0;
+      right: 10px;
+      background: $light-gray;
+      margin: 2px 0 28px;
+
+    }
   }
 }
 
-section.about{
+section.about {
 
-  div.container{
+  div.container {
     position: relative;
     min-height: 212px;
 
-    div.wrap{
+    div.wrap {
       width: 779px;
       display: flex;
       justify-content: space-between;
       position: absolute;
       right: 10px;
+
       div.company,
-      div.targets{
+      div.targets {
 
         box-sizing: content-box;
         margin: 0 0 20px;
 
-        p{
+        p {
           color: $mare-light-gray;
           letter-spacing: 0.35px;
           width: 370px;
@@ -471,7 +541,7 @@ section.about{
 
 }
 
-footer{
+footer {
   //display: none;
   box-sizing: content-box;
   position: absolute;
@@ -483,38 +553,44 @@ footer{
   min-width: 1000px;
   min-height: 165px;
   background: $mare-light-gray;
-  div.container{
+
+  div.container {
     display: flex;
     justify-content: space-between;
 
-    color:$white;
-    a{
-      color:$white;
+    color: $white;
+
+    a {
+      color: $white;
 
     }
-    div.copy{
+
+    div.copy {
       width: 200px;
       height: 35px;
     }
-    div.list{
 
-      ul{
+    div.list {
 
-        li{
+      ul {
+
+        li {
           list-style: none;
 
-          a{
+          a {
             text-decoration: none;
             border-bottom: 1px solid $white;
           }
         }
       }
     }
-    div.footer-logo{
+
+    div.footer-logo {
       display: flex;
       align-items: flex-start;
-      img{
-      padding: 0 9px;
+
+      img {
+        padding: 0 9px;
       }
     }
   }
